--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     </div>
    
-    <script src="../dist/build.js"></script>
+    <script src="dist/build.js"></script>
     <script>
       function home(){
         var down=document.getElementById('container');
