--- a/img.html
+++ b/img.html
@@ -223,7 +223,7 @@
 
     </div>
    
-    <script src="/dist/build.js"></script>
+	<script src="./dist/build.js"></script>
     <script>
 
       function help(){
