--- a/right.html
+++ b/right.html
@@ -239,7 +239,7 @@
 
     </div>
    
-    <script src="/dist/build.js"></script>
+    <script src="./dist/build.js"></script>
     <script>
 
       function help(){
